<resources>
    <string name="app_name">Github User App</string>
    <string name="search">search user</string>
    <string name="search_hint">type username</string>
    <string name="followers">" followers"</string>
    <string name="followings">" followings"</string>
    <string name="tab_layout">tab layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>
    <string name="username_unknown">username unknown</string>
    <string name="name_uknown">Name Uknown</string>
    <string name="followerss">followers</string>
    <string name="following">Following</string>
    <string name="favorite">Favorite Users</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="Setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="not_found">Not Found</string>
</resources>